# antsy

./: Cargo.toml  README.md
benches/: display.rs
examples/: apply.rs  bright.rs  demo.rs  indexed.rs  nested.rs  pallete.rs  simple.rs
src/: color.rs  color_choice.rs  display.rs  enable.rs  lib.rs  macros.rs  style.rs  styled.rs  styled_macro.rs
